Cambiada forma de acceso a la lista